<resources>
    <string name="app_name">ChronoTasker</string>
    <string name="login">Iniciar sesión</string>
    <string name="tilUserHint">Nombre de usuario o email</string>
    <string name="tilPasswordHint">Contraseña</string>
    <string name="chkRemember"><u>Recordarme</u></string>
    <string name="btnSignIn">Entrar</string>
    <string name="btnSignUp">Registro</string>
    <string name="txvSignup">¿No tienes cuenta? ¡<b>Regístrate</b>!</string>
    <string name="signup">Registro</string>
    <string name="tilUsernameHint">Nombre de usuario</string>
    <string name="tilEmailHint">Correo electrónico</string>
    <string name="textAbout"><u>Más sobre Chronotasker</u></string>
    <string name="contentAbout">Somos una empresa malagueña joven y dinámica. Puedes encontrarnos <a href="http://www.mercacortex.hol.es/">aquí</a>.</string>
    <string name="textGeneralSettings">Ajustes de la aplicación</string>
    <string name="textAccountSettings">Ajustes del usuario</string>
    <string name="action_menu_logout">Cerrar sesión</string>

    <string name="category_archived">Archivada</string>
    <string name="category_default">Normal</string>
    <string name="category_important">Importante</string>
    <string name="category_urgent">Urgente</string>
    <string name="category_informal">Informal</string>

    <string name="action_task_sort_priority">Ver prioritarias</string>
    <string name="action_menu_task_sort_urgent">Ver urgentes</string>
    <string name="action_menu_task_sort_start_date">Ver próximas</string>
    <string name="action_menu_task_sort_important">Ver importantes</string>
    <string name="action_menu_task_sort_default">Ver por fecha de creación</string>
    <string name="undo">Deshacer</string>
    <string name="info_task_deleted">eliminada con éxito</string>
    <string name="info_task_restored">restaurada</string>
    <string name="edt_title">Título</string>
    <string name="edt_description">Descripción</string>
    <string name="ckbInformal">Informal</string>
    <string name="ckbDefault">Normal</string>
    <string name="ckbImportant">Importante</string>
    <string name="ckbUrgent">Urgente</string>
    <string name="open_drawer">Abrir panel lateral</string>
    <string name="close_drawer">Cerrar panel lateral</string>
    <string name="txvUserName">Nombre</string>
    <string name="txvEmail">Email</string>
    <string name="navview_subheader">Configuración</string>
    <string name="action_help">Ayuda</string>
    <string name="action_config">Ajustes</string>
    <string name="action_home">Tareas</string>
    <string name="action_alarm">Alarmas</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="info_task_updated">actualizada con éxito</string>
    <string name="alarm_title">Alarma</string>
    <string name="alarm_content">Alarma</string>
    <string name="error_database_alarm_update">Error. No se pudo editar la alarma.</string>
    <string name="error_database_alarm_save">Error. No se pudo guardar la alarma.</string>
    <string name="error_database_alarm_delete">Error. No se pudo eliminar la alarma.</string>
    <string name="error_user_not_found">Credenciales no válidos</string>
    <string name="login_title">ChronoTasker</string>
    <string name="action_game">Mi pecera</string>
    <string name="action_calendar">Calendario</string>
    <string name="error_email_length_invalid">Longitud no válida de email</string>
    <string name="dpk_start_date">Fecha de inicio</string>
    <string name="dpk_end_date">Fecha de fin</string>
    <string name="error_date_range">Rango de fechas no válido</string>
    <string name="error_title_empty">Necesita un título</string>

</resources>
