<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edt_title"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edt_description"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/ckbInformal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ckbInformal"
        />

    <CheckBox
        android:id="@+id/ckbImportant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ckbImportant"
        />

    <CheckBox
        android:id="@+id/ckbUrgent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ckbUrgent"
        />

    <TextView
        android:id="@+id/txvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="11:11 11/11/2011"
        />

</LinearLayout>