<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.usuario.chronotasker.mvvm.login.LoginViewModel"
            />
    </data>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".mvvm.login.LoginActivity"
            >

            <TextView
                android:id="@+id/txvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/login"
                android:textAppearance="@style/Custom.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvTitle"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilUserHint"
                    android:inputType="text"
                    bind:text="@{viewModel.name}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edt"
                app:layout_constraintEnd_toEndOf="@+id/tilName"
                app:layout_constraintStart_toStartOf="@+id/tilName"
                app:layout_constraintTop_toBottomOf="@+id/tilName"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilPasswordHint"
                    android:inputType="textPassword"
                    bind:text="@{viewModel.password}"
                    />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/chkRemember"
                bind:checked="@{safeUnbox(viewModel.checked)}"
                app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tilPassword"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/btnSignIn"
                bind:onClick="@{() -> viewModel.onClickLogin()}"
                app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                app:layout_constraintStart_toStartOf="@+id/tilPassword"
                app:layout_constraintTop_toBottomOf="@+id/chbRemember"
                />

            <Button
                android:id="@+id/txvSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimaryLight"
                android:text="@string/txvSignup"
                android:textAlignment="center"
                android:textAppearance="@style/Custom.SignUp"
                bind:onClick="@{() -> viewModel.onClickSignup()}"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                />

        </android.support.constraint.ConstraintLayout>

</layout>